--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -14,6 +14,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: bottom;
+    position: relative;
 }
 
 header .bg-gradient {
@@ -26,7 +27,7 @@ header .bg-gradient {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); 
 }
 
-header .hearder-border {
+header .header-border {
     display: flex;
     border-bottom:  rgba(255, 255, 255,.25) 1px solid;
 
@@ -43,27 +44,246 @@ header #logo {
 }
 
 
-header #menu {
+.menu {
     flex: 1;    
 }
 
-header #menu ul {
+.menu ul {
     display: flex;
     justify-content: flex-end;
     list-style: none;
     padding: 0;
+
 }
 
-header #menu li {
+.menu li {
     min-width: 100px;
     line-height: 28px;
 }
 
-header #menu a {
+.menu a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-    padding: 20px;
-    
+    padding: 20px;   
 
 }
+
+#register {
+    background-color: #fff;
+    width: 100%;
+    height: 400px;
+    max-width: 350px ;
+    position: absolute;
+    bottom: 0;
+    right: 10vw;
+    box-shadow: 0 0 2.1875rem rgba(140,152,164,.125);
+    border-top-left-radius: 0.30rem;
+    border-top-right-radius: 0.30rem;
+    padding: 20px;
+    color: #333;
+}
+
+#register p {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 35px;
+}
+
+#register .field {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#register input {
+    width: 100%;
+    padding: .75rem 1rem;
+    border-radius: 4px;
+    border: #ccc 1px solid;
+}
+
+#register input[type=radio] {
+    width: 25px;
+}
+
+#register button {
+    width: 100%;
+    border: none;
+    background-color: #e67e22;
+    color: #fff;
+    padding: .75rem;
+    font-size: 1.2em;
+}
+
+.container1 {
+    max-width: 960px;
+    margin: auto;
+    width: 100%;
+    padding-left: 15px;
+}
+
+.title1 h1 {
+    font-size: 3em;
+    border-bottom: #ccc 1px solid;
+    padding-bottom: 1rem;
+}
+
+.home1 p {
+    text-align: justify;
+}
+
+footer {
+    background-color: #f5f5f5;
+    color: #6c757d;
+    font-size: .8em;
+    display: flex;
+    justify-content: center;
+    
+}
+
+footer p {
+    line-height: 35px; /* altura da linha */
+
+}
+
+footer .container{
+    display: flex;
+    
+}
+
+footer .menufooter a {
+    color: #6c757d;
+}
+
+
+
+
+.menufooter {
+    flex: 1;    
+}
+
+.menufooter ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    padding: 0;
+
+}
+
+.menufooter li {
+    min-width: 100px;
+    line-height: 28px;
+}
+
+.menufooter a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 20px;   
+
+}
+
+.menu .open-menu{
+    display: none;  
+
+}
+
+.menu .close-menu{
+    display: none;
+}
+
+.backdrop {
+    display: none;
+}
+
+@media(max-width: 550px){
+
+    .menu .close-menu{
+        display: block;
+        text-align: right;
+        background-color: #eee;
+    }
+
+    .menu .close-menu button {
+        background-color: none;
+        border: none;
+        font-size: 2em;
+        padding: .75rem 1rem;
+    }
+    
+    .menu.open .backdrop {
+        opacity: .5;
+        display: block;
+    }
+
+
+    .menu.open .backdrop {
+       /* opacity: 0; */
+        background-color: #000;
+        transition: opacity .15s linear;
+        position: fixed;
+        width:  100%;
+        height: 100vh;
+        z-index: 1;
+        left: 0;
+        top: 0;
+    }
+
+    header .header-border {
+        justify-content: space-between;
+        margin-right: 30px;
+        
+    }
+    
+    .menu ul {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: -80vw;
+        width: 80vw;
+        height: 100vh;
+        background-color: #fff;
+        z-index: 1;
+        margin: 0;
+        transition: right .2s linear;
+    }
+
+    .menu.open ul{
+        right: 0;
+
+    }
+
+    .menu.open a {
+        color: #000;
+        padding: 20px;
+        display: block;
+        font-weight: 100;
+        border-bottom: #ccc 1px solid;
+    }
+
+    
+    .menu {
+        width: 60px;
+        flex: inherit;
+    }
+
+    #register {
+        width: 90%;
+        margin:  0 5%;
+        max-width: initial;
+        right: inherit;
+    }
+
+
+    .menu .open-menu{
+        display: block;
+        font-size: 3.3em;
+        padding: .9rem;
+        flex: 1;
+        background: none;
+        border: none;
+        color: #fff;
+
+    }
+}
+
