--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -1,3 +1,171 @@
+
+.container-slide{
+    display: flex;
+    justify-content: space-between;
+    width: 80vw;
+    height: 70vh;
+    background-color: black;
+    margin: 20vh auto;
+    border-radius: 10px;
+    box-shadow: 0 20px 30px black;
+    border: 5px solid black;
+}
+
+.container-items {
+    position: absolute;
+    display: flex;
+    width: 80vw;
+    height: 70vh;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.item {
+    width: 80vw;
+    height: 70vh;
+    transition: all 1s;
+}
+.item:first-child{
+    margin-left: -100%;
+}
+
+.item img {
+    width: 80vw;
+    height: 70vh;
+    border-radius: 10px;
+}
+
+.action-button{
+    font: bold 30px sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    color: #00000000;
+    user-select: none;
+    z-index: 1;
+}
+.action-button{
+    color: white;
+    background-color: #00000055;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 1s;
+}
+
+
+
+
+.content-center1 {
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.content-center1 .text-center {
+    text-align: center;
+}
+
+.content-center1 img {
+    width: 100%;
+}
+
+.content-center1 form{
+    margin: 20px;
+}
+
+.content-center1 input,
+.content-center1 button {
+    width: 100%;
+    padding: 10px 5px;
+    border: none;
+    outline: none;
+    
+}
+
+.content-center1 input {
+    border-bottom-color: #ccc;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    margin-bottom: 10px;
+}
+
+.content-center1 button {
+    background-color: #d07335;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.content-center1 input:focus {
+    border-bottom-color: #d07335;
+}
+
+.content-center1 button:hover {
+    background-color: #b55b28;
+    cursor: pointer;
+}
+
+.content-center1 button:active {
+    background-color: #c14e0e;
+    cursor: pointer;
+    
+}
+
+header a {
+    color: #666;
+    text-decoration: none;
+}
+
+
+ h1 {
+    font-size: 2.5em;
+    text-align: center;
+    margin: 50px auto;
+}
+
+footer {
+    font-size: .8em;
+    text-align: center;
+}
+
+.content-tabuada {
+    width: 100%;
+    text-align: center;
+    max-width: 500px;
+    background-color: #fff;
+    margin: auto;
+    padding: 20px;
+
+}
+.content-tabuada td {
+    padding: .75rem;
+    border-top: 1px solid #dee2e6;
+}
+
+.content-tabuada table {
+    width: 100%;
+    border-collapse: collapse ;
+}
+
+.content-tabuada tbody tr:nth-child(odd) { /* onde selecionar o coluna entre () odd numeros pares e even é numeros ímpares */
+    background-color: #b55b28;
+}
+
+.content-tabuada tbody tr:hover {
+    background-color: #666;
+    cursor: pointer;
+}
+
+#valorA {
+    width: 100%;
+    padding: 10px;
+}
+
+
+
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +177,7 @@ body {
 }
 
 header {
-    min-height: 700px;
+    min-height: 600px;
     background-image: url('../img/violino23.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,6 +209,27 @@ header #logo {
     font-size: 2em;
     font-weight: bold;
     text-shadow: #000 1px 1px 8px;
+}
+
+
+header button{
+    cursor: pointer;
+}
+
+header .button:hover {
+    cursor: pointer;
+  
+    border-radius: 10px;
+}
+
+
+header button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    list-style: none;
+    font-size: 20px;
+    
 }
 
 
@@ -113,6 +302,19 @@ header #logo {
     color: #fff;
     padding: .75rem;
     font-size: 1.2em;
+    border-radius: 10px;
+}
+
+
+#register button:hover {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    background-color: #f5a259;
+    color: rgb(26, 23, 23);
+    padding: .75rem;
+    font-size: 1.2em;
+    border-radius: 10px;
 }
 
 .container1 {
@@ -130,6 +332,10 @@ header #logo {
 
 .home1 p {
     text-align: justify;
+    
+}
+.home1 .container1 p {
+    font-size: 23px;
 }
 
 footer {
@@ -198,6 +404,10 @@ footer .menufooter a {
 
 @media(max-width: 550px){
 
+    #register {
+        display: none;
+    }
+
     .menu .close-menu{
         display: block;
         text-align: right;
@@ -207,8 +417,12 @@ footer .menufooter a {
     .menu .close-menu button {
         background-color: none;
         border: none;
-        font-size: 2em;
+        font-size: 3.3em;
         padding: .75rem 1rem;
+    }
+
+    .menu .close-menu button:hover{
+        cursor: pointer;
     }
     
     .menu.open .backdrop {
@@ -227,6 +441,10 @@ footer .menufooter a {
         z-index: 1;
         left: 0;
         top: 0;
+    }
+
+    .menu.open .backdrop {
+        cursor: pointer;
     }
 
     header .header-border {
@@ -285,5 +503,14 @@ footer .menufooter a {
         color: #fff;
 
     }
+
+    .menu .open-menu:hover{
+        cursor: pointer;
+       
+
+    }
 }
+
+    
+
 
