--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -135,6 +135,10 @@ header a {
     text-align: center;
 }
 
+.foooter p { 
+       padding-bottom: 150px;
+    
+}
 .content-tabuada {
     width: 100%;
     text-align: center;
@@ -189,8 +193,17 @@ header {
     position: relative;
 }
 
+.headerlogin {
+    min-height: 30px;
+    background-image: url('../img/violino23.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: bottom;
+    position: relative;
+}
+
 header .bg-gradient {
-    min-height: 300px;
+    min-height: 30px;
     width: 100%;
     background: linear-gradient(to bottom, rgba(0,0,0,.65) 0% rgba(0,0,0,0) 100% );
     background: -moz-linear-gradient(bottom,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); 
