--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -177,6 +177,7 @@ header a {
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 body {
@@ -218,16 +219,6 @@ header .header-border {
 
 }
 
-header .header-border .busca {
-     margin: 20px;
-}
-
-header .header-border .busca input {
-    padding: 10px;
-    border-radius: 7px;
-    padding-right: 30px;
-    border: none;
-}
 
 header #logo {
     width: 200px;
@@ -380,6 +371,56 @@ ul {
     list-style: none;
 }
 
+
+.cordasviolino{
+    background-image: url(/img/cordasviolino02.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+}
+
+.cordasviolinosegundo{
+    background-image: url(/img/cordasViolino.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+
+.tamanhosviolion{
+    background-image: url(/img/tamanhosviolino.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 600px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+
+.table{
+    width: 100%;
+    height: 60vh;
+       
+}
+
+.theader{
+    margin-right: 5px;
+    text-align: left;
+    font-weight: bold;
+    font-size: 20px;    
+}
+
+tbody{
+    font-size: 20px;
+}
+
 .footer1{
     background-color: #24262b;
     padding: 70px 0;
@@ -453,6 +494,7 @@ ul {
     background-color: #fff;
 
 }
+
 
 
 .imagesviolion{
